--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="flex cartdiv">
             <img class="cart" src="assets/cart-icon.png" alt="">
-            <h3 > <strong> Cart Items (0) </strong> </h3>
+            <h3 > <strong> Cart items (0) </strong> </h3>
         </div>
     </nav>
 
@@ -294,7 +294,7 @@
         <div>
             <h2>Brought to you by</h2>
         <div id="pic">
-            
+
             </div> 
         </div>
         <div>
