--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         </div>
         <div>
            <h3>Sravan</h3>
-            <p class="Footertext">Made with love ✌️ by Kalvian
+            <p id="Footertext">Made with love ✌️ by Kalvian
                 <br>
                 Talk to me at 
                 <u>sravanr788@gmail.com </u></p>
